BST-126362 BST-127200 - 6030 Refactor 'Franchises or lettings' section to use a single loop